--- a/SparcFeatures/Projects/ProjectsList.razor
+++ b/SparcFeatures/Projects/ProjectsList.razor
@@ -40,28 +40,28 @@
             <ProjectCard 
                 Title="KodeKit" 
                 Status="Live"
-                ImgUrl="/images/Laptop.png"
+                ImgUrl="/images/projects/Kodekit mockup.png"
                 Link="https://www.kodekit.io/"
                 Github="https://github.com/sparc-coop/kodekit"
                 Content="@KodekitText"
                 ChannelId="kodekit-content"/>
             <ProjectCard Title="Ibis" 
                 Status="Live"
-                ImgUrl="/images/ibis.png"
+                ImgUrl="/images/projects/Ibis mockup.png"
                 Link="https://ibis.chat"
                 Github="https://github.com/sparc-coop/ibis"
                 Content="@IbisText"
                 ChannelId="ibis-content"/>
             <ProjectCard Title="Law of 100" 
                 Status="Live"
-                ImgUrl="/images/lawof100.png"
+                ImgUrl="/images/projects/Law of 100 mockup.png"
                 Link="https://lawof100.co/"
                 Github="https://github.com/sparc-coop/law-of-100"
                 Content="@LawofText"
                 ChannelId="lawof100-content"/>
             <ProjectCard Title="Conseris" 
                 Status="In Progress"
-                ImgUrl="/images/conseris.png"
+                ImgUrl="/images/projects/conseris.png"
                 Link="https://conseris.io/"
                 Github="https://github.com/sparc-coop"
                 Content="@ConserisText"
