home, navmenu, projects responsive for mobile

--- a/SparcFeatures/App.Variables.scss
+++ b/SparcFeatures/App.Variables.scss
@@ -14,6 +14,7 @@ $purple-500: #0C0662;
 $purple-100: #ECEBFF;
 $yellow-500: #FFB600;
 $yellow-100: #F2EDDF;
+$yellow-50: #FCFBF7;
 $grey-900: #111321;
 $grey-700: #38383B;
 $grey-500: #68696E;
