--- a/SparcFeatures/Community/CommunityCta.scss
+++ b/SparcFeatures/Community/CommunityCta.scss
@@ -120,6 +120,11 @@
             }
 
             &.left {
+                .hero {
+                    width: 200px;
+                    height: auto;
+                }
+
                 .community-join {
                     display: block;
                     text-align: center;
