--- a/SparcFeatures/Pages/Index.razor
+++ b/SparcFeatures/Pages/Index.razor
@@ -29,7 +29,7 @@
     </section>
 
     <div class="content @Scrollable">
-        <section class="mission white-background" id="mission">
+        <section class="mission light-background" id="mission">
             <div class="mission-wrapper">
                 <div class="mission-icon">
                     <img src="images/icons/04.svg" />
@@ -124,7 +124,7 @@
             </div>
         </section>
 
-        <section class="community white-background">
+        <section class="community light-background">
             <header>
                 <div class="section-tag community-tag"><p class="subtitle-medium">Sparc Community</p></div>
                 <h2 class="subtitle-large semi-bold">
@@ -135,7 +135,7 @@
             <Sparc.Coop.Community.CommunityCta />
         </section>
 
-        @*<section class="resources white-background">
+        @*<section class="resources light-background">
             <header>
                 <div class="section-tag resources-tag"><p class="subtitle-medium">Sparc Resources</p></div>
                 <h2 class="subtitle-large semi-bold">
