--- a/SparcFeatures/Pages/Index.scss
+++ b/SparcFeatures/Pages/Index.scss
@@ -19,7 +19,7 @@ body.ibis-translating {
         }
     }
 
-    .white-background {
+    .light-background {
         margin: 0 calc((100vw - 1218px) / -2);
         padding: 100px calc((100vw - 1218px) / 2);
         background: $white;
@@ -278,7 +278,7 @@ body.ibis-translating {
     }
 
     @media only screen and (max-width: 1440px) {
-        .white-background {
+        .light-background {
             margin: 0 calc((100vw - 1098px) / -2);
             padding: 100px calc((100vw - 1098px) / 2);
             background: $white;
@@ -317,10 +317,10 @@ body.ibis-translating {
     }
 
     @media only screen and (max-width: 1200px) {
-        .white-background {
+        .light-background {
             margin: 0 calc((100vw - 673px) / -2);
             padding: 100px calc((100vw - 673px) / 2);
-            background: $white;
+            background: $yellow-50;
         }
 
         .home-hero {
@@ -379,7 +379,7 @@ body.ibis-translating {
     }
 
     @media only screen and (max-width: 850px) {
-        .white-background {
+        .light-background {
             margin: 0 calc((100vw - 501px) / -2);
             padding: 100px calc((100vw - 501px) / 2);
         }
@@ -527,7 +527,7 @@ body.ibis-translating {
     }
 
     @media only screen and (max-width: 600px) {
-        .white-background {
+        .light-background {
             margin: 0 calc((100vw - 329px) / -2);
             padding: 100px calc((100vw - 329px) / 2);
         }
@@ -601,7 +601,7 @@ body.ibis-translating {
             overflow-x: hidden;
         }
 
-        .white-background {
+        .light-background {
             margin: 0 calc((100vw - 301px) / -2);
             padding: 100px calc((100vw - 301px) / 2);
             background: $white;
