--- a/SparcFeatures/Projects/ProjectCard.scss
+++ b/SparcFeatures/Projects/ProjectCard.scss
@@ -1,9 +1,9 @@
 ﻿@import "../App.Variables.scss";
 
 .project-card {
-    margin-bottom: 30px;
+    margin-bottom: 38px;
     padding: 0px;
-    width: 589px;
+    width: 534px;
     height: auto;
 
     .card-header {
@@ -39,7 +39,8 @@
 
     .image-wrapper {
         position: relative;
-        height: 367px;
+        width: 100%;
+        height: 338px;
 
         .project-status {
             position: absolute;
