--- a/SparcFeatures/Projects/ProjectsList.razor
+++ b/SparcFeatures/Projects/ProjectsList.razor
@@ -1,26 +1,22 @@
 ﻿@page "/Projects"
+@layout MainLayout
 
 <div class="project-list-page">
-    
-    <section class="hero-header">
-         <div class="container">
-             <div class="header">
-                <div class="icon-wrapper">
-                <img src="./images/icons/09-yellow.svg" />
-                </div>
-                <div>
-                    <h2 class="title-1">Every great idea begins with a sparc. Explore our journey to bring some of our ideas to sustainable reality.</h2>
-                </div>
-@*                <div class="project-tags">
-                    <button class="btn-small tag">Productivity</button>
-                    <button class="btn-small tag">Ideas</button>
-                    <button class="btn-small tag">Creativity</button>
-                    <button class="btn-small tag">Inpirational</button>
-                    <button class="btn-small tag">Motivative</button>
-                </div>
-*@             </div>
+    <header>
+        <div class="icon-wrapper">
+            <img src="./images/icons/09-yellow.svg" />
         </div>
-    </section>
+        <h2 class="title-1">
+            Every great idea begins with a sparc. Explore our journey to bring some of our ideas to sustainable reality.
+        </h2>
+        <div class="project-tags">
+            <button class="btn-small tag">Productivity</button>
+            <button class="btn-small tag">Ideas</button>
+            <button class="btn-small tag">Creativity</button>
+            <button class="btn-small tag">Inpirational</button>
+            <button class="btn-small tag">Motivative</button>
+        </div>      
+    </header>
 
     <section class="project-list-wrapper">
 @*        <div class="filters">
