--- a/SparcFeatures/app.scss
+++ b/SparcFeatures/app.scss
@@ -2,6 +2,7 @@
 @import "App.Assets";
 
 @import "Shared/MarketingLayout";
+@import "Shared/MainLayout";
 @import "Shared/NavMenu";
 
 @import "Projects/ProjectsList";
