--- a/SparcFeatures/Shared/MainLayout.scss
+++ b/SparcFeatures/Shared/MainLayout.scss
@@ -1,30 +1,21 @@
 ﻿@import "../App.Variables.scss";
 
-main.landing {
+main {
     display: grid;
-    grid-template-columns: 1fr repeat(12, 74px) 1fr;
+    grid-template-columns: 1fr repeat(12, 64px) 1fr;
     grid-column-gap: 30px;
     background: $background;
     overflow-x: hidden;
 
-    .homepage, .project-list-page {
+    .project-list-page {
         grid-column: 2/14;
-    }
-
-    @media screen and (max-width: 1440px) {
-        grid-template-columns: 1fr repeat(12, 64px) 1fr;
-        grid-column-gap: 30px;
-
-        .homepage, .project-list-page {
-            grid-column: 2/14;
-        }
     }
 
     @media screen and (max-width: 1200px) {
         grid-template-columns: 1fr repeat(8, 71px) 1fr;
         column-gap: 15px;
 
-        .homepage, .project-list-page {
+        .project-list-page {
             grid-column: 2/10;
         }
     }
@@ -32,7 +23,7 @@ main.landing {
     @media screen and (max-width: 850px) {
         grid-template-columns: 1fr repeat(6, 71px) 1fr;
 
-        .homepage, .project-list-page {
+        .project-list-page {
             grid-column: 2/8;
         }
     }
@@ -40,7 +31,7 @@ main.landing {
     @media screen and (max-width: 600px) {
         grid-template-columns: 1fr repeat(4, 71px) 1fr;
 
-        .homepage, .project-list-page {
+        .project-list-page {
             grid-column: 2/6;
         }
     }
