fix hover state of card-tags in ProjectCard

--- a/SparcFeatures/Projects/ProjectCard.scss
+++ b/SparcFeatures/Projects/ProjectCard.scss
@@ -81,7 +81,7 @@
             }
 
             button:hover {
-                background: var(--secondary-300);
+                /*background: var(--secondary-300);*/
                 cursor: default !important;
             }
         }
