--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -11,6 +11,7 @@
     <base href="~/" />
     <link rel="stylesheet" type="text/css" href="https://api.kodekit.io/greffe-winterweight.css">
     <link href="css/app.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.typekit.net/dda1jal.css">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
