--- a/SparcFeatures/Kori/KoriTestPage.scss
+++ b/SparcFeatures/Kori/KoriTestPage.scss
@@ -5,7 +5,7 @@
     transition: 200ms ease-in-out;
 
     &:hover {
-        border: 1px solid var(--orange);
+        border: 1px solid var(--orange-300);
         cursor: pointer;
     }
 
@@ -13,7 +13,7 @@
         background: white;
         border: 15px solid transparent;
         border-radius: 24px;
-        border-image: url('kori/brush-effect__content.svg') 15 round;
+        border-image: url('kori/images/brush-effect__content.svg') 15 round;
     }
 }
 
